--- a/js_proj_backend/Gemfile
+++ b/js_proj_backend/Gemfile
@@ -11,6 +11,9 @@ gem 'sqlite3', '~> 1.4'
 gem 'puma', '~> 4.1'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.7'
+
+gem 'active_model_serializers'
+
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
