--- a/js_proj_backend/Gemfile
+++ b/js_proj_backend/Gemfile
@@ -14,6 +14,8 @@ gem 'puma', '~> 4.1'
 
 gem 'active_model_serializers'
 
+gem 'pry'
+
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
